--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="nocolor">#00FFFFFF</color>
+    <color name="green">#4CAF50</color>
+    <color name="grey">#D9DDD9</color>
+
+
 
 </resources>
