--- a/app/src/main/res/layout/activity_detail_mahasiswa_sidang.xml
+++ b/app/src/main/res/layout/activity_detail_mahasiswa_sidang.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detailMahasiswaSeminar">
+    tools:context=".detailMahasiswaSidang">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -180,8 +181,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
     <Button
-        android:id="@+id/tambahDosenSeminar"
-        android:onClick="tambahDosenSeminar"
+        android:id="@+id/tambahDosenSidang"
+        android:onClick="tambahDosenSidang"
         android:layout_width="324dp"
         android:layout_height="61dp"
         android:layout_marginStart="50dp"
