--- a/app/src/main/res/layout/activity_detailta.xml
+++ b/app/src/main/res/layout/activity_detailta.xml
@@ -17,7 +17,7 @@
         tools:context=".detailta">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/gambar"
             android:layout_width="73dp"
             android:layout_height="92dp"
             android:src="@drawable/fotodosen"
@@ -29,7 +29,7 @@
             app:layout_constraintVertical_bias="0.421" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textNama"
             android:layout_width="299dp"
             android:layout_height="25dp"
             android:fontFamily="sans-serif-black"
@@ -53,12 +53,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.312"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView7"
+            app:layout_constraintStart_toEndOf="@+id/gambar"
+            app:layout_constraintTop_toBottomOf="@+id/textNama"
             app:layout_constraintVertical_bias="0.037" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/textJudul_ta"
             android:layout_width="299dp"
             android:layout_height="25dp"
             android:fontFamily="sans-serif-medium"
@@ -68,7 +68,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.333"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
+            app:layout_constraintStart_toEndOf="@+id/gambar"
             app:layout_constraintTop_toBottomOf="@+id/textView15"
             app:layout_constraintVertical_bias="0.0" />
 
@@ -83,12 +83,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.304"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
-            app:layout_constraintTop_toBottomOf="@+id/textView12"
+            app:layout_constraintStart_toEndOf="@+id/gambar"
+            app:layout_constraintTop_toBottomOf="@+id/textJudul_ta"
             app:layout_constraintVertical_bias="0.147" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/textDoping"
             android:layout_width="299dp"
             android:layout_height="25dp"
             android:layout_marginTop="1dp"
@@ -99,7 +99,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.333"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
+            app:layout_constraintStart_toEndOf="@+id/gambar"
             app:layout_constraintTop_toBottomOf="@+id/textView6"
             app:layout_constraintVertical_bias="1.0" />
 
@@ -115,7 +115,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.93"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
+            app:layout_constraintStart_toEndOf="@+id/gambar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.578" />
 
