--- a/app/src/main/res/layout/activity_listtugasakhir.xml
+++ b/app/src/main/res/layout/activity_listtugasakhir.xml
@@ -45,7 +45,7 @@
         android:text="List Permintaan TA"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView2"
+        app:layout_constraintBottom_toTopOf="@+id/rv_ta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         app:layout_constraintVertical_bias="0.235" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
+        android:id="@+id/rv_ta"
         android:layout_width="409dp"
         android:layout_height="595dp"
         app:layout_constraintBottom_toBottomOf="parent"
