--- a/app/src/main/res/layout/activity_listtugasakhir.xml
+++ b/app/src/main/res/layout/activity_listtugasakhir.xml
@@ -58,11 +58,9 @@
         android:layout_height="595dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/top"
         tools:listitem="@layout/activity_detailta" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
