--- a/app/src/main/res/layout/activity_detail_mahasiswa_sidang.xml
+++ b/app/src/main/res/layout/activity_detail_mahasiswa_sidang.xml
@@ -117,7 +117,7 @@
         tools:text="Gedung Seminar A" />
 
     <TextView
-        android:id="@+id/textJudul_ta"
+        android:id="@+id/textBidangDosen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
@@ -130,7 +130,7 @@
         tools:text="-" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textNamaDosen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -142,7 +142,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView8" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/textNIK"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -152,7 +152,7 @@
         app:layout_constraintEnd_toStartOf="@+id/textView10"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:layout_constraintTop_toBottomOf="@+id/textNamaDosen" />
 
     <TextView
         android:id="@+id/textView15"
@@ -164,7 +164,7 @@
         tools:text="Tempat :"
         app:layout_constraintEnd_toStartOf="@+id/textDoping"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintTop_toBottomOf="@+id/textNIK" />
 
     <TextView
         android:id="@+id/textView16"
@@ -174,7 +174,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         tools:text="Peserta :"
-        app:layout_constraintEnd_toStartOf="@+id/textJudul_ta"
+        app:layout_constraintEnd_toStartOf="@+id/textBidangDosen"
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
