--- a/app/src/main/res/layout/activity_detailpermintaan_ta.xml
+++ b/app/src/main/res/layout/activity_detailpermintaan_ta.xml
@@ -26,6 +26,7 @@
         android:layout_height="58dp"
         android:backgroundTint="@color/nocolor"
         android:src="@drawable/bekbek"
+        android:onClick="kembali"
         app:layout_constraintBottom_toBottomOf="@+id/top"
         app:layout_constraintEnd_toEndOf="@+id/top"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,13 +66,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:layout_row="0"
+            android:layout_column="1"
             android:layout_marginLeft="16sp"
             android:fontFamily="sans-serif-black"
             android:text="Sefza Auma Tiang Alam"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            android:layout_column="1"
-            android:layout_row="0" />
+            android:textSize="18sp" />
 
         <TextView
             android:layout_width="match_parent"
@@ -145,11 +146,13 @@
             android:layout_row="5" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/ubahDosen"
             android:layout_width="100dp"
             android:layout_height="37dp"
             android:layout_row="5"
             android:layout_column="1"
             android:layout_marginLeft="16dp"
+            android:onClick="gantiDosen"
             android:layout_marginBottom="200dp"
             android:background="@drawable/buttonshapemain"
             android:fontFamily="sans-serif-black"
