--- a/app/src/main/res/layout/activity_detailta.xml
+++ b/app/src/main/res/layout/activity_detailta.xml
@@ -17,7 +17,7 @@
         tools:context=".detailta">
 
         <ImageView
-            android:id="@+id/gambar"
+            android:id="@+id/profil_dosen"
             android:layout_width="73dp"
             android:layout_height="92dp"
             android:src="@drawable/fotodosen"
@@ -53,12 +53,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.312"
-            app:layout_constraintStart_toEndOf="@+id/gambar"
+            app:layout_constraintStart_toEndOf="@+id/profil_dosen"
             app:layout_constraintTop_toBottomOf="@+id/textNama"
             app:layout_constraintVertical_bias="0.037" />
 
         <TextView
-            android:id="@+id/textJudul_ta"
+            android:id="@+id/textBidangDosen"
             android:layout_width="299dp"
             android:layout_height="25dp"
             android:fontFamily="sans-serif-medium"
@@ -68,7 +68,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.333"
-            app:layout_constraintStart_toEndOf="@+id/gambar"
+            app:layout_constraintStart_toEndOf="@+id/profil_dosen"
             app:layout_constraintTop_toBottomOf="@+id/textView15"
             app:layout_constraintVertical_bias="0.0" />
 
@@ -83,8 +83,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.304"
-            app:layout_constraintStart_toEndOf="@+id/gambar"
-            app:layout_constraintTop_toBottomOf="@+id/textJudul_ta"
+            app:layout_constraintStart_toEndOf="@+id/profil_dosen"
+            app:layout_constraintTop_toBottomOf="@+id/textBidangDosen"
             app:layout_constraintVertical_bias="0.147" />
 
         <TextView
@@ -99,25 +99,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.333"
-            app:layout_constraintStart_toEndOf="@+id/gambar"
+            app:layout_constraintStart_toEndOf="@+id/profil_dosen"
             app:layout_constraintTop_toBottomOf="@+id/textView6"
             app:layout_constraintVertical_bias="1.0" />
-
-        <Button
-            android:layout_width="93dp"
-            android:layout_height="47dp"
-            android:background="@color/nocolor"
-            android:fontFamily="sans-serif-black"
-            android:text="lihat"
-            android:textColor="#44DA11"
-            android:textSize="15dp"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.93"
-            app:layout_constraintStart_toEndOf="@+id/gambar"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.578" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
