--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,11 +76,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.21"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/textNamaDosen"
         app:layout_constraintVertical_bias="0.015" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/textNamaDosen"
         android:layout_width="218dp"
         android:layout_height="19dp"
         android:fontFamily="sans-serif-black"
