--- a/app/src/main/res/layout/activity_permintaan_ta_approved.xml
+++ b/app/src/main/res/layout/activity_permintaan_ta_approved.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detailpermintaanTA">
+    tools:context=".permintaanTA_approved">
+
 
     <ImageView
         android:id="@+id/top"
@@ -26,7 +27,7 @@
         android:layout_height="58dp"
         android:backgroundTint="@color/nocolor"
         android:src="@drawable/bekbek"
-        android:onClick="kembali"
+        android:onClick="bekkk"
         app:layout_constraintBottom_toBottomOf="@+id/top"
         app:layout_constraintEnd_toEndOf="@+id/top"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,7 +66,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="20dp"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_marginLeft="16sp"
@@ -104,7 +105,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="1dp"
             android:fontFamily="serif"
-            android:text="SPK Pemilihan Bank Terbaik"
+            android:text="SPK Penetuan Lokasi ATM Terbaik"
             android:textColor="#373434"
             android:textSize="18sp"
             android:layout_column="1"
@@ -112,8 +113,8 @@
 
         <TextView
             android:id="@+id/textDospingTA"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_width="447dp"
+            android:layout_height="101dp"
             android:layout_row="4"
             android:layout_column="1"
             android:layout_marginLeft="16dp"
@@ -146,31 +147,15 @@
             android:layout_column="1"
             android:layout_row="5" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/ubahDosen"
-            android:layout_width="100dp"
-            android:layout_height="37dp"
-            android:layout_row="5"
-            android:layout_column="1"
-            android:layout_marginLeft="16dp"
-            android:onClick="gantiDosen"
-            android:layout_marginBottom="200dp"
-            android:background="@drawable/buttonshapemain"
-            android:fontFamily="sans-serif-black"
-            android:text="Ubah"
-            android:textColor="@color/white"
-            android:textSize="14dp" />
-
 
     </GridLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="330dp"
         android:layout_height="52dp"
-        android:background="@drawable/buttonblmredy"
+        android:background="@drawable/buttonshapemain"
         android:fontFamily="sans-serif-black"
-        android:text="Approve"
-        android:onClick="approve"
+        android:text="Approved"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -179,6 +164,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gridLayout"
         app:layout_constraintVertical_bias="0.75" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
