--- a/app/src/main/res/layout/activity_jadwalseminar.xml
+++ b/app/src/main/res/layout/activity_jadwalseminar.xml
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:text="Jadwal Sidang"
+        android:text="Jadwal Seminar"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
