--- a/app/src/main/res/layout/activity_list_jadwalseminar.xml
+++ b/app/src/main/res/layout/activity_list_jadwalseminar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".list_jadwalsidang">
+    tools:context=".list_jadwalseminar">
 
 
     <ImageView
@@ -42,10 +42,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:text="List jadwal Sidang"
+        android:text="List jadwal Seminar"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/rv_jdwlsid"
+        app:layout_constraintBottom_toTopOf="@+id/rv_jdwlsem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
         app:layout_constraintVertical_bias="0.235" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_jdwlsid"
+        android:id="@+id/rv_jdwlsem"
         android:layout_width="match_parent"
         android:layout_height="600dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +62,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.82"
-        tools:listitem="@layout/activity_detail_sidang"/>
+        tools:listitem="@layout/activity_detail_seminar"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
