intent ke ta mahasiswa

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -235,6 +235,7 @@
         android:layout_width="52dp"
         android:layout_height="53dp"
         android:backgroundTint="#ffffff"
+        android:onClick="tugasakhir"
         android:src="@drawable/user"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
