--- a/app/src/main/res/layout/activity_card_view_mahasiswa_sidang.xml
+++ b/app/src/main/res/layout/activity_card_view_mahasiswa_sidang.xml
@@ -15,7 +15,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="135dp"
-        tools:layout_editor_absoluteY="1dp">
+        tools:layout_editor_absoluteY="1dp"
+        android:background="@color/pink">
+
 
 
         <ImageView
