--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="nocolor">#00FFFFFF</color>
     <color name="green">#4CAF50</color>
     <color name="grey">#D9DDD9</color>
+    <color name="pink">#D63B70</color>
 
 
 
