cari mahasiswa done

--- a/app/src/main/res/layout/activity_cari_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_cari_mahasiswa.xml
@@ -70,6 +70,7 @@
         app:srcCompat="@drawable/search" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_cm"
         android:layout_width="388dp"
         android:layout_height="509dp"
         app:layout_constraintBottom_toBottomOf="parent"
