--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,15 +97,15 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="98dp"
-        android:layout_height="178dp"
+        android:layout_width="83dp"
+        android:layout_height="115dp"
         android:src="@drawable/fotodosen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.112"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.225" />
+        app:layout_constraintVertical_bias="0.259" />
 
     <TextView
         android:id="@+id/textnamaUser"
@@ -117,12 +117,12 @@
         android:textColor="@color/white"
         android:textSize="10dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.263" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.153" />
 
     <TextView
         android:id="@+id/textView4"
@@ -149,9 +149,9 @@
         android:text="Profile"
         android:textColor="@color/black"
         android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintHorizontal_bias="0.106"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top"
         app:layout_constraintVertical_bias="0.0" />
@@ -198,19 +198,18 @@
         android:layout_height="48dp"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="34dp"
-        android:layout_marginBottom="68dp"
         android:background="@drawable/buttonshapemain"
         android:fontFamily="sans-serif-condensed"
         android:onClick="jdwlsidang"
         android:text="Jadwal Sidang"
         android:textColor="@color/white"
         android:textSize="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/listmhasiswa"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.828"
+        app:layout_constraintHorizontal_bias="0.823"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sidreq"
-        app:layout_constraintVertical_bias="0.75" />
+        app:layout_constraintVertical_bias="0.219" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_jdwlseminar"
