--- a/app/src/main/res/layout/list_peserta_seminar.xml
+++ b/app/src/main/res/layout/list_peserta_seminar.xml
@@ -6,21 +6,21 @@
     android:layout_height="30dp">
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/nama_mhs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:text="Darib"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView21"
+        app:layout_constraintEnd_toStartOf="@+id/nim"
         app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/nim"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="80dp"
