--- a/app/src/main/res/layout/activity_listtugasakhir.xml
+++ b/app/src/main/res/layout/activity_listtugasakhir.xml
@@ -50,7 +50,7 @@
         app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top"
-        app:layout_constraintVertical_bias="0.235" />
+        app:layout_constraintVertical_bias="0.588" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ta"
@@ -61,6 +61,7 @@
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top"
+        app:layout_constraintVertical_bias="1.0"
         tools:listitem="@layout/activity_detailta" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
