--- a/app/src/main/res/layout/activity_list_jadwalsidang.xml
+++ b/app/src/main/res/layout/activity_list_jadwalsidang.xml
@@ -47,10 +47,10 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_jdwlsid"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top"
-        app:layout_constraintVertical_bias="0.235" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_jdwlsid"
@@ -60,9 +60,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.82"
-        tools:listitem="@layout/activity_detail_sidang"/>
+        app:layout_constraintTop_toBottomOf="@+id/top"
+        app:layout_constraintVertical_bias="1.0"
+        tools:listitem="@layout/activity_detail_sidang" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
