--- a/app/src/main/res/layout/activity_detail_dosen.xml
+++ b/app/src/main/res/layout/activity_detail_dosen.xml
@@ -73,7 +73,7 @@
             app:layout_constraintVertical_bias="0.313" />
 
         <TextView
-            android:id="@+id/textBidangDosen"
+            android:id="@+id/text_judulTA"
             android:layout_width="299dp"
             android:layout_height="25dp"
             android:fontFamily="sans-serif"
