--- a/app/src/main/res/layout/activity_detailpermintaan_ta.xml
+++ b/app/src/main/res/layout/activity_detailpermintaan_ta.xml
@@ -44,10 +44,10 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintHorizontal_bias="0.058"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.113" />
+        app:layout_constraintTop_toBottomOf="@+id/top"
+        app:layout_constraintVertical_bias="0.015" />
 
     <GridLayout
         android:id="@+id/gridLayout"
@@ -59,9 +59,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
 
-        app:layout_constraintVertical_bias="0.497">
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.155">
 
         <TextView
             android:id="@+id/textNama_mahasiswa"
@@ -76,28 +76,29 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/text_NIMmhs"
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:layout_row="1"
+            android:layout_column="1"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-black"
             android:text="2011521010"
             android:textColor="#373434"
-            android:textSize="18sp"
-            android:layout_column="1"
-            android:layout_row="1" />
+            android:textSize="18sp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:layout_row="2"
+            android:layout_column="1"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="10dp"
             android:fontFamily="serif"
             android:text="Judul Tugas Akhir :"
             android:textColor="#373434"
-            android:textSize="18sp"
-            android:layout_column="1"
-            android:layout_row="2" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/textJudulTA"
@@ -129,24 +130,24 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
+            android:layout_row="5"
+            android:layout_column="1"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="70dp"
             android:fontFamily="serif"
             android:text="Proposal.pdf"
             android:textColor="#1B17E2"
-            android:textSize="18sp"
-            android:layout_column="1"
-            android:layout_row="5" />
+            android:textSize="18sp" />
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="36dp"
+            android:layout_row="5"
+            android:layout_column="1"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="70dp"
             android:layout_marginBottom="5dp"
-            android:src="@drawable/desk"
-            android:layout_column="1"
-            android:layout_row="5" />
+            android:src="@drawable/desk" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/ubahDosen"
@@ -155,10 +156,10 @@
             android:layout_row="5"
             android:layout_column="1"
             android:layout_marginLeft="16dp"
-            android:onClick="gantiDosen"
             android:layout_marginBottom="200dp"
             android:background="@drawable/buttonshapemain"
             android:fontFamily="sans-serif-black"
+            android:onClick="gantiDosen"
             android:text="Ubah"
             android:textColor="@color/white"
             android:textSize="14dp" />
@@ -171,8 +172,8 @@
         android:layout_height="52dp"
         android:background="@drawable/buttonblmredy"
         android:fontFamily="sans-serif-black"
-        android:text="Approve"
         android:onClick="approve"
+        android:text="Approve"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -180,7 +181,7 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gridLayout"
-        app:layout_constraintVertical_bias="0.75" />
+        app:layout_constraintVertical_bias="0.652" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
