--- a/app/src/main/res/layout/activity_detailta.xml
+++ b/app/src/main/res/layout/activity_detailta.xml
@@ -10,17 +10,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
+
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
-        android:layout_height="135dp"
+        android:layout_height="244dp"
         tools:context=".detailta">
 
         <ImageView
             android:id="@+id/profil_dosen"
             android:layout_width="73dp"
             android:layout_height="92dp"
-            android:src="@drawable/fotodosen"
+            android:src="@drawable/logounand"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.03"
@@ -29,79 +30,73 @@
             app:layout_constraintVertical_bias="0.421" />
 
         <TextView
-            android:id="@+id/textNama"
-            android:layout_width="299dp"
-            android:layout_height="25dp"
+            android:id="@+id/text_judulTugasAkhir"
+            android:layout_width="319dp"
+            android:layout_height="148dp"
             android:fontFamily="sans-serif-black"
             android:text="Sefza Auma Tiang Alam"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/textView15"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/textView7"
             android:layout_width="299dp"
             android:layout_height="25dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Judul : "
+            android:text="Tanggal Pengajuan : "
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.312"
+            app:layout_constraintHorizontal_bias="0.285"
             app:layout_constraintStart_toEndOf="@+id/profil_dosen"
-            app:layout_constraintTop_toBottomOf="@+id/textNama"
-            app:layout_constraintVertical_bias="0.037" />
+            app:layout_constraintTop_toBottomOf="@+id/text_judulTugasAkhir"
+            app:layout_constraintVertical_bias="0.112" />
 
         <TextView
-            android:id="@+id/textBidangDosen"
+            android:id="@+id/textView11"
             android:layout_width="299dp"
             android:layout_height="25dp"
             android:fontFamily="sans-serif-medium"
-            android:textStyle="bold"
-            android:text="SPK Pemilihan lokasi ATM"
+            android:text="status : "
             android:textSize="15sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.333"
+            app:layout_constraintHorizontal_bias="0.285"
             app:layout_constraintStart_toEndOf="@+id/profil_dosen"
-            app:layout_constraintTop_toBottomOf="@+id/textView15"
+            app:layout_constraintTop_toBottomOf="@+id/txt_idtanggal"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/txt_idtanggal"
             android:layout_width="299dp"
             android:layout_height="25dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Pembimbing : "
-            android:textStyle="bold"
+            android:text="24/03/12"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.304"
+            app:layout_constraintHorizontal_bias="0.285"
             app:layout_constraintStart_toEndOf="@+id/profil_dosen"
-            app:layout_constraintTop_toBottomOf="@+id/textBidangDosen"
-            app:layout_constraintVertical_bias="0.147" />
+            app:layout_constraintTop_toBottomOf="@+id/textView7"
+            app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
-            android:id="@+id/textDoping"
-            android:layout_width="299dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="1dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="Ricky Akbar, M.Kom"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.333"
-            app:layout_constraintStart_toEndOf="@+id/profil_dosen"
-            app:layout_constraintTop_toBottomOf="@+id/textView6"
-            app:layout_constraintVertical_bias="1.0" />
+        <ImageView
+            android:id="@+id/checklist"
+            android:layout_width="26dp"
+            android:layout_height="23dp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView11"
+            app:layout_constraintEnd_toEndOf="@+id/textView11"
+            app:layout_constraintHorizontal_bias="0.996"
+            app:layout_constraintStart_toStartOf="@+id/textView11"
+            app:layout_constraintTop_toTopOf="@+id/textView11"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/check" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
