--- a/app/src/main/res/layout/activity_listtugasakhir.xml
+++ b/app/src/main/res/layout/activity_listtugasakhir.xml
@@ -50,7 +50,7 @@
         app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top"
-        app:layout_constraintVertical_bias="0.588" />
+        app:layout_constraintVertical_bias="0.647" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ta"
@@ -60,8 +60,8 @@
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.931"
         tools:listitem="@layout/activity_detailta" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
