RV kedua selesai UAS

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -235,6 +235,7 @@
         android:layout_height="53dp"
         android:backgroundTint="#ffffff"
         android:src="@drawable/user"
+        android:onClick="listMHS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.256"
