--- a/app/src/main/res/layout/activity_listtugasakhir.xml
+++ b/app/src/main/res/layout/activity_listtugasakhir.xml
@@ -54,8 +54,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_ta"
-        android:layout_width="409dp"
-        android:layout_height="595dp"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
