--- a/app/src/main/res/layout/activity_detailta.xml
+++ b/app/src/main/res/layout/activity_detailta.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
-        android:layout_height="244dp"
+        android:layout_height="223dp"
         tools:context=".detailta">
 
         <ImageView
@@ -24,15 +24,15 @@
             android:src="@drawable/logounand"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.03"
+            app:layout_constraintHorizontal_bias="0.033"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.421" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/text_judulTugasAkhir"
-            android:layout_width="319dp"
-            android:layout_height="150dp"
+            android:layout_width="313dp"
+            android:layout_height="131dp"
+            android:layout_marginEnd="4dp"
             android:fontFamily="sans-serif-black"
             android:text="Sefza Auma Tiang Alam"
             android:textSize="18sp"
@@ -51,10 +51,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.285"
+            app:layout_constraintHorizontal_bias="0.263"
             app:layout_constraintStart_toEndOf="@+id/profil_dosen"
             app:layout_constraintTop_toBottomOf="@+id/text_judulTugasAkhir"
-            app:layout_constraintVertical_bias="0.112" />
+            app:layout_constraintVertical_bias="0.149" />
 
         <TextView
             android:id="@+id/textView11"
