--- a/app/src/main/res/layout/activity_card_view_dosen.xml
+++ b/app/src/main/res/layout/activity_card_view_dosen.xml
@@ -17,7 +17,7 @@
 
 
         <ImageView
-            android:id="@+id/avatar"
+            android:id="@+id/imgDosen"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="16dp"
@@ -39,12 +39,12 @@
             android:fontFamily="sans-serif-black"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/avatar"
+            app:layout_constraintStart_toEndOf="@+id/imgDosen"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Husnil Kamil" />
 
         <TextView
-            android:id="@+id/bidang"
+            android:id="@+id/NIP"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -52,23 +52,9 @@
             android:fontFamily="sans-serif-black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/avatar"
+            app:layout_constraintStart_toEndOf="@+id/imgDosen"
             app:layout_constraintTop_toBottomOf="@+id/namaDosen"
-            tools:text=" Bidang :  " />
-
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:fontFamily="sans-serif-black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/avatar"
-            app:layout_constraintTop_toBottomOf="@+id/bidang"
-            tools:text="Web Programing, Android" />
+            tools:text="NIP : " />
 
         <RadioButton
             android:id="@+id/radioButton"
