--- a/app/src/main/res/layout/activity_detail_mahasiswa_sidang.xml
+++ b/app/src/main/res/layout/activity_detail_mahasiswa_sidang.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
 
         android:background="@color/green"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+        app:layout_constraintBottom_toTopOf="@+id/imgDetail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/imgDetail"
         android:layout_width="112dp"
         android:layout_height="95dp"
         android:layout_marginStart="8dp"
@@ -53,7 +53,7 @@
         app:srcCompat="@drawable/propil" />
 
     <TextView
-        android:id="@+id/textNama"
+        android:id="@+id/namaDetail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -61,12 +61,12 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
+        app:layout_constraintStart_toEndOf="@+id/imgDetail"
         app:layout_constraintTop_toBottomOf="@+id/appbar"
         tools:text="Sefza Auma" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/judulDetail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -74,8 +74,8 @@
         android:layout_marginEnd="8dp"
         tools:text="E-Tugas Akhir Berbasis Android"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/textNama" />
+        app:layout_constraintStart_toEndOf="@+id/imgDetail"
+        app:layout_constraintTop_toBottomOf="@+id/namaDetail" />
 
     <TextView
         android:id="@+id/textView9"
@@ -87,11 +87,11 @@
         android:drawableTint="#050505"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
+        app:layout_constraintTop_toBottomOf="@+id/imgDetail"
         tools:text="Husnil Kamil. MT" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/dateDetail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
@@ -113,7 +113,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/dateDetail"
         tools:text="Gedung Seminar A" />
 
     <TextView
@@ -139,7 +139,7 @@
         tools:text="Pembimbing :"
         app:layout_constraintEnd_toStartOf="@+id/textView9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
+        app:layout_constraintTop_toBottomOf="@+id/imgDetail" />
 
     <TextView
         android:id="@+id/textNIK"
@@ -149,7 +149,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         tools:text="Waktu :"
-        app:layout_constraintEnd_toStartOf="@+id/textView10"
+        app:layout_constraintEnd_toStartOf="@+id/dateDetail"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textNamaDosen" />
@@ -178,19 +178,5 @@
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
-
-    <Button
-        android:id="@+id/tambahDosenSidang"
-        android:onClick="tambahDosenSidang"
-        android:layout_width="324dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="#DD9934"
-        android:text="Tambah"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
